corrected overflow for deferred view

--- a/static/tm.css
+++ b/static/tm.css
@@ -360,11 +360,14 @@ html, body {
     padding: 4px 4px 0 8px;
 }
 
-.DeferredView-listholder {
-    padding: 4px;
+.DeferredView-holder {
     width: 100%;
     height: 100%;
     overflow: auto;
+}
+
+.DeferredView-listholder {
+    padding: 4px;
     box-sizing: border-box;
     max-width: 800px;
 }
